# python_russia

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
core/core/: middleware.py  settings.py  urls.py
core/project_secrets/env/: .env.example
core/static/css/: base.css
core/users/: admin.py  models.py
core/users/migrations/: 0001_initial.py  0002_initial.py
core/vacancies/: admin.py  factories.py  forms.py  models.py  signals.py
core/vacancies/migrations/: 0001_initial.py  0002_vacancy_link.py  0003_alter_vacancy_stack.py  0004_resume_language_alter_jobplace_speciality_and_more.py  0005_alter_vacancy_stack.py  0006_vacancy_is_remote.py  0007_alter_vacancy_unique_together_and_more.py
core/vacancies/selectors/: vacancy.py
core/vacancies/templates/: base.html
core/vacancies/templates/includes/: navbar.html  vacancy-filter.html
core/vacancies/templates/vacancy/: create.html  list.html  partial.html
core/vacancies/urls/: urls.py
core/vacancies/views/default/vacancy/: create.py  list.py
